--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <body>
     <header class="timer"></header>
     <h1 class="question">Click the button "Start" to begin the quiz</h1>
-    <p class="answerA"></p>
-    <p class="answerB"></p>
-    <p class="answerC"></p>
-    <p class="answerD"></p>
+    <ul class="buttons">
+      <li>Start Quiz</li>
+    </ul>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
